Fix chips delete button spacing

--- a/src/app/company/business-config/business-config.component.scss
+++ b/src/app/company/business-config/business-config.component.scss
@@ -9,7 +9,7 @@ mat-slide-toggle {
 }
 
 
-button {
+button.action {
     margin-top: 1rem;
     margin-right: 1rem;
 }
